---
source: crates/squawk_linter/src/rules/ban_char_field.rs
expression: "lint_errors(sql, Rule::BanCharField)"
---
warning[ban-char-field]: Using `character` is likely a mistake and should almost always be replaced by `text` or `varchar`.
  ╭▸ 
4 │     b char(100),
  │       ━━━━━━━━━
  ╭╴
4 │     b varchar(100),
  ╰╴      +++
warning[ban-char-field]: Using `character` is likely a mistake and should almost always be replaced by `text` or `varchar`.
  ╭▸ 
5 │     c character(100),
  │       ━━━━━━━━━━━━━━
  ╭╴
5 -     c character(100),
5 +     c varchar(100),
  ╰╴
warning[ban-char-field]: Using `character` is likely a mistake and should almost always be replaced by `text` or `varchar`.
  ╭▸ 
6 │     d char,
  │       ━━━━
  ╭╴
6 -     d char,
6 +     d text,
  ╰╴
warning[ban-char-field]: Using `character` is likely a mistake and should almost always be replaced by `text` or `varchar`.
  ╭▸ 
7 │     e character,
  │       ━━━━━━━━━
  ╭╴
7 -     e character,
7 +     e text,
  ╰╴
warning[ban-char-field]: Using `character` is likely a mistake and should almost always be replaced by `text` or `varchar`.
   ╭▸ 
15 │     o pg_catalog.char,
   │       ━━━━━━━━━━━━━━━
   ╭╴
15 -     o pg_catalog.char,
15 +     o pg_catalog.text,
   ╰╴
warning[ban-char-field]: Using `character` is likely a mistake and should almost always be replaced by `text` or `varchar`.
   ╭▸ 
16 │     p char[],
   │       ━━━━
   ╭╴
16 -     p char[],
16 +     p text[],
   ╰╴
warning[ban-char-field]: Using `character` is likely a mistake and should almost always be replaced by `text` or `varchar`.
   ╭▸ 
17 │     q nchar
   │       ━━━━━
   ╭╴
17 -     q nchar
17 +     q text
   ╰╴
